# spectralcanvas-pro-v2

./: .cursorrules  .gitignore  AGENTS.md  ARCHITECTURAL_PATTERNS_SUMMARY.md  AUDIO_PIPELINE_TRACE.md  BLUEPRINTS.md  BUILD.md  CLAUDE.md  CLAUDE_HEADERS.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CUSTOM_GPT_SPECIFICATION.md  DEVELOPMENT_ROADMAP.md  DUAL_GPT_STRATEGY.md  GEMS.md  GRAVEYARD.md  MIGRATION.md  README.md  RESEARCH_ARCHIVE.md  ROADMAP.md  STFT_FIX_SUMMARY.md  UI_ARCHITECTURE_ANALYSIS.md  VALIDATE.md  plan.md  pluginval.cmake  setup-spectralcanvas.ps1
.agent-os/: config.yml  rt-safety-guardian.yaml
.agent-os/commands/: audio-plugin-commands.md
.agent-os/instructions/: spectralcanvas-pro.md
.agent-os/product/: mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/standards/: juce-audio-plugin-standards.md
.claude/: config.local.json  settings.json  settings.local.json
.claude/agents/: api-compat-shimmer.md  build-validator.md  code-simplification.md  dsp-knowledge-loader.md  dsp-knowledge.md  latency-auditor.md  patch-generator.md  pdf-curator.md  reproducer-builder.md  rt-safety-auditor.md  rt-threading-linter.md  sanitizer-runner.md  snapshot-verifier.md
.claude/commands/: validate-plugin.md
.claude/state/: current_task.json
.githooks/: pre-commit
.github/workflows/: ci-windows.yml  protected-paths.yml  tests.yml  validate-plugin.yml
SALVAGE_OUT/: AUTHORED_FILES.txt  CXX_FILES_BY_SIZE.txt  CXX_FILES_BY_SIZE_FILTERED.txt  GEMS_FILTERED.txt  INVENTORY.md  LICENSE_HITS.txt  cmake_files.txt  juce_projects.txt
Source/: SpectralCanvasProAudioProcessor.cpp  SpectralCanvasProAudioProcessor.h  SpectralCanvasProEditor.cpp  SpectralCanvasProEditor.h  SpectralPaintProcessor.cpp  SpectralPaintProcessor.h
Source/Audio/: SampleManager.cpp  SampleManager.h
Source/Compat/: WindowingCompat.h
Source/Core/: AtlasIds.h  AtomicOscillator.cpp  AtomicOscillator.h  ColorToSpectralMapper.cpp  ColorToSpectralMapper.h  ColumnOps.h  ContinuousVerification.h  DiagnosticLogger.cpp  DiagnosticLogger.h  GPUStatus.h  LatencyTracker.h  MaskAtlas.h  MaskColumn.h  MessageBus.h  MessageBus_Old.h  PaintQueue.h  ParameterSnapshot.h  ParameterUpdate.h  Params.h  Phase4DebugTap.h  PlatformTimeUtils.h  ProcessBlockImpl.cpp  RealtimeMemoryManager.h  RealtimeSafeTypes.h  ReconfigManager.h  SampleLoaderService.cpp  SampleLoaderService.h  SampleMessage.h  SpectralCanvasLiteProcessor.cpp  SpectralCanvasLiteProcessor.h  SpectralCoreEngine.h  SpectralFrame.h  SpectrogramRenderer.h  SpscRingBuffer.h  TiledAtlas.cpp  TiledAtlas.h  TimeUtils.h  UndoManager.h
Source/DSP/: GestureEvent.h  HopScheduler.cpp  HopScheduler.h  KeyFilter.cpp  KeyFilter.h  MaskTestFeeder.cpp  MaskTestFeeder.h  MorphFilter.h  OfflineStftAnalyzer.cpp  OfflineStftAnalyzer.h  RealtimeSpectral.h  SampleLoader.cpp  SampleLoader.h  SpectralEngine.cpp  SpectralEngine.cpp.backup  SpectralEngine.h  SpectralEngineStub.cpp  SpectralEngineStub.h  SpectralEngine_Fixed.cpp  SpectralEngine_Fixed.h  SpectralMask.h  SpectralModel.cpp  SpectralModel.h  SpectralPlayer.cpp  SpectralPlayer.h  SpectralProcessor.cpp  SpectralProcessor.h  SpscRingBuffer.h  SynthEngine.h  SynthEngineStub.cpp  SynthEngineStub.h  TripleMailbox.h
Source/GUI/: BottomBar.cpp  BottomBar.h  BrushTools.cpp  BrushTools.h  CanvasComponent.cpp  CanvasComponent.h  CanvasComponent_Backup.cpp  CanvasComponent_Minimal.cpp  HudFormatter.h  MinimalBottomStrip.cpp  MinimalBottomStrip.h  MinimalTopStrip.cpp  MinimalTopStrip.h  PerfHUD.cpp  PerfHUD.h  SpectrogramComponent.cpp  SpectrogramComponent.h  ToastManager.cpp  ToastManager.h  TopStrip.cpp  TopStrip.h
Source/UI/: ModernLookAndFeel.h  SpectralCanvasLiteEditor.cpp  SpectralCanvasLiteEditor.h
Source/Utils/: SpscQueueLite.h  TracyProfiler.h
Source/Viz/: DeviceLostHandler.h  GpuRenderer.cpp  GpuRenderer.h  RenderThread.h
Source/nodes/: SpectralPaintNode.cpp  SpectralPaintNode.h
Source/rt/: MaskColumnLite.h  SpscQueueLite.h
SpectralCanvasPro_Patch_v0_1/: README_PATCH.md
Tests/: AllocationDetector.cpp  AllocationDetector.h  BenchWindowFft.cpp  CMakeLists.txt  D3D11RecoveryHandleTest.cpp  GPUResilienceTest.cpp  PerfHarness.cpp  ProcessBlockTest.cpp  ProcessorPaintPathsTest.cpp  QueueTest.cpp  RTSafetyTest.cpp  ReactivationStress.cpp  SampleLoadTest.cpp  SpectralEngineMaskTest.cpp  SpectralPaintNodeTest.cpp  SpectralResynthesisIdentityTest.cpp  TestHarness.cpp  TestHarness.h
artifacts/perf/: bench-window-fft.md
build_clean/: CTestTestfile.cmake
docs/: BLUEPRINT.md  CLAUDE.md  CONTEXT_BRIDGE.md  CURSOR_CONTEXT.md  DOC_CODE_AUDIT.md  Developer-Notes.md  MIGRATION_LOG.md  PsychoacousticEngine_Analysis.md  README.md  ROADMAP.md  SESSION_CONTEXT_APPENDIX.md  SESSION_HANDOFF.md  SpectralSynthEngine_Analysis.md  TODO.md  WorkflowQuickstart.md  agents-risk.md  build-pipeline.md
docs/archive/: AGENTS.md  CLAUDE.md  GEMS.md  INDEX.md
docs/rt-audio-foundations/: README.md  USAGE.md  card-denormal-handling.md  card-juce-dsp-baseline.md  card-rt-safe-memory-patterns.md  card-stft-windowing-cola.md  index.json
docs/session-notes/: 2025-08-27-project-initialization.md
docs/snippets/: AudioProcessor_snippet.cpp  CanvasComponent_snippet.cpp  ColorMapper_snippet.cpp  UI_SampleLoader.cpp
docs/validation/: phase2-3-results.md  test-procedures.md
scripts/: clean.ps1  clean.sh  test-stability.ps1
sessions/: sessions-config.backup.json  sessions-config.json
sessions/knowledge/: index.json
sessions/tasks/: h-implement-spectral-processing.md  h-implement-todos.md  i-fix-windowing-benchmark.md
tasks/: todo.md
tools/: ai_model_usage.md  build-validator.ps1  build_dsp_knowledge_base.py  card_scaffold.py  check_orphans.py  dsp_validation_framework.h  golden_invariants_prompt.md  knowledge_ingest.py  pdf_to_md_chunks.py  process_ccrma_links.py  process_dsp_pdfs.py  run-build-validator.bat  run-build-validator.sh  strategic_knowledge_template.md
tools/cards/: 01-Knowledge-Ingest-Workflow.md  02-CCRMA-References-Workflow.md  03-Build-Validator-Usage.md  04-PDF-to-MD-Chunks.md  INDEX.md
(+269 files in other folders)
